@@ -3,6 +3,8 @@ WebHelpers ChangeLog
 1.0b1 (tip)
 * webhelpers.feedgenerator:
   - ``rfc3339_date`` now accepts date objects without crashing.
+  - Add 'generator' and 'source' properties to RSS2 feeds. Patch by
+    Vince Spicer.
 * webhelpers.html.converters:
   - New helper ``render()`` formats HTML to text.
   - New helper ``sanitize()`` strips HTML tags from user input.
